test/error/float_enum_member.colgm
pub enum foo {
    bar = 1.0,
    baz = 2.0,
    qux = 3.0,
    quux = 4.0,
    corge = 5.0,
    grault = 6.0,
    garply = 7.0,
    waldo = 8.0,
    fred = 9.0,
    plugh = 10.0,
    xyzzy = 11.0
}