test/error/float_enum_member.result
Error: enum member "bar" cannot be specified with floating point number
  --> test/error/float_enum_member.colgm:2:11
  | 
2 |     bar = 1.0,
  |           ^^^

Error: enum member "baz" cannot be specified with floating point number
  --> test/error/float_enum_member.colgm:3:11
  | 
3 |     baz = 2.0,
  |           ^^^

Error: enum member "qux" cannot be specified with floating point number
  --> test/error/float_enum_member.colgm:4:11
  | 
4 |     qux = 3.0,
  |           ^^^

Error: enum member "quux" cannot be specified with floating point number
  --> test/error/float_enum_member.colgm:5:12
  | 
5 |     quux = 4.0,
  |            ^^^

Error: enum member "corge" cannot be specified with floating point number
  --> test/error/float_enum_member.colgm:6:13
  | 
6 |     corge = 5.0,
  |             ^^^

Error: enum member "grault" cannot be specified with floating point number
  --> test/error/float_enum_member.colgm:7:14
  | 
7 |     grault = 6.0,
  |              ^^^

Error: enum member "garply" cannot be specified with floating point number
  --> test/error/float_enum_member.colgm:8:14
  | 
8 |     garply = 7.0,
  |              ^^^

Error: enum member "waldo" cannot be specified with floating point number
  --> test/error/float_enum_member.colgm:9:13
  | 
9 |     waldo = 8.0,
  |             ^^^

Error: enum member "fred" cannot be specified with floating point number
  --> test/error/float_enum_member.colgm:10:12
   | 
10 |     fred = 9.0,
   |            ^^^

Error: enum member "plugh" cannot be specified with floating point number
  --> test/error/float_enum_member.colgm:11:13
   | 
11 |     plugh = 10.0,
   |             ^^^^

Error: enum member "xyzzy" cannot be specified with floating point number
  --> test/error/float_enum_member.colgm:12:13
   | 
12 |     xyzzy = 11.0
   |             ^^^^